# Mini-Serach-Engine

./: CMakeLists.txt  README.md
include/: Document.h  DocumentReader.h  Indexer.h  SearchEngine.h  Tokenizer.h
src/: DocumentReader.cpp  Indexer.cpp  SearchEngine.cpp  Tokenizer.cpp  main.cpp
